@@ -1,5 +1,9 @@
 == Change Log
 
+=== Edge
+
+* Set the protected attributes for users in User.protected_attributes [Jim Gay]
+
 === 0.8.0 RC1
 
 * Make features task run in instance mode. [Sean Cribbs]
